19.75.